# tic-tac-toe-fastapi

./: README.md  pyproject.toml
src/: main.py
src/server/: router.py  utils.py
templates/: index.html
